<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="navigation_drawer_open">Side slip menu open</string>
    <string name="navigation_drawer_close">Side slip menu close</string>
    <string name="home_title">Home page</string>
    <string name="toolbar_menu_weixin_txt">Wechat</string>
    <string name="toolbar_menu_qq_txt">QQ</string>
    <string name="login_qq_text">QQ</string>
    <string name="login_weixin_text">Wechat log in</string>
    <string name="login_account_tips">telephone number</string>
    <string name="login_pwd_tips">password</string>
    <string name="login_account_error"> telephone number error</string>
    <string name="login_pwd_error">password error</string>
    <string name="other_login_tips">Other login methods</string>
    <string name="drawer_home">Notebook</string>
    <string name="drawer_note_sort">Classification of notes</string>
    <string name="drawer_note_collect">Collection cabinet</string>
    <string name="drawer_search">search</string>
    <string name="drawer_ble_scan">Bluetooth search</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_operating">The user guide</string>
    <string name="drawer_logout">Log out</string>
    <string name="drawer_data_migration">data transmission</string>
    <string name="str_send_data">send data</string>
    <string name="str_get_data">Receive data</string>
    <string name="str_data_null">You don’t have any notebook data, can’t transfer</string>
    <string name="str_migration_tips">The sender and receiver must be connected to the same WiFi</string>
    <string name="str_scan_qr_code">Scan QR code</string>
    <string name="str_scan_server_qr_code">Scan the QR code on the receiving end</string>
    <string name="str_linking">connecting..</string>
    <string name="str_link_fail">Unsuccessful connection</string>
    <string name="str_link_fail_tips">Please confirm whether it is in the same LAN as the other party</string>
    <string name="str_all_select">select all</string>
    <string name="str_send">send</string>
    <string name="str_send_tips">Please confirm whether the data sent is the same, the same data will be overwritten.</string>
    <string name="str_send_list">Data transfer list</string>
    <string name="str_send_error_tips">Back to the background or leave this page, all data will be cancelled</string>
    <string name="str_send_success">Sent successfully</string>
    <string name="str_get_success">Received successfully</string>
    <string name="str_sending">sending</string>
    <string name="str_competed">completed</string>
    <string name="str_migration_version_error">Inconsistent transmission version</string>
    <string name="str_oher_version_error">The counterparty version is lower, please upgrade to the latest version first</string>
    <string name="str_mine_version_error">Your version is lower, please upgrade to the latest version first</string>
    <string name="str_linked">connected</string>
    <string name="str_wait_data">Waiting for data transmission...</string>
    <string name="str_server_tips">Please use the sender to scan this QR code\nThe mobile phone sent and received must be connected to the same WiFi</string>
    <string name="str_link_close">The other party has disconnected the transmission</string>
    <string name="str_wait">Waiting</string>
    <string name="str_geting_data">Receiving</string>
    <string name="str_zip_error">An error occurred during file compression.</string>
    <string name="str_close_tips">All data transmission will be cancelled after exiting the page, please confirm exit?</string>
    <string name="dialog_title">Warm prompt</string>
    <string name="dialog_tips_text">I know</string>
    <string name="dialog_confirm_text">Confirm</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="dialog_delete_text">Delete</string>
    <string name="dialog_ignore_text">Ignore</string>
    <string name="dialog_receive_text">Reception</string>
    <string name="history_data_text">Data synchronization takes about %1$s seconds. Please confirm synchronization.</string>
    <string name="dialog_label_title">Add a TAB</string>
    <string name="dialog_edit_tips">Please enter the tag name</string>
    <string name="dialog_rename_tips">Please enter the name of the notebook</string>
    <string name="drawer_note_rename">Rename</string>
    <string name="rename_success">Rename success</string>
    <string name="no_update_version">This is the latest version</string>
    <string name="not_updated">Not to update</string>
    <string name="update_now">Update now</string>
    <string name="install_apk_path">com.eningqu.smartpen</string>
    <string name="bluetooth_not_support">The device does not support bluetooth</string>
    <string name="device_name">Bluetooth search</string>
    <string name="exit_tips">Press the exit application again</string>
    <string name="blue_connecting">Connecting [%1$s]</string>
    <string name="blue_connect_success">Bluetooth connected</string>
    <string name="blue_connect_fail">Bluetooth connection failed</string>
    <string name="blue_connect_discontinue">Bluetooth connection interrupt</string>
    <string name="bluetooth_close">Mobile phone bluetooth has been closed</string>
    <string name="bluetooth_open">Mobile phone bluetooth is on.</string>
    <string name="update_version_tips">Can be updated to the new version</string>
    <string name="advertising">Advertising coming</string>
    <string name="location_tips">GPS not turned on, Do you want to set immediately?</string>
    <string name="dialog_setting_text">Setting</string>
    <string name="login_QQ">QQ</string>
    <string name="login_Wechet">WeChet</string>
    <string name="login_SinaWeibo">SinaWeibo</string>
    <string name="delete_success">Deleted</string>
    <string name="collect_success">Collection success</string>
    <string name="collect_fail">Failed to collect</string>
    <string name="confirm_collect_text">If the collection of the notebook is successful, all data cannot be modified again.Please confirm whether to collect?</string>
    <string name="confirm_delete_text">After deletion, it will not be restored. Do you really want to delete it?</string>
    <string name="confirm_delete_page_text">Are you sure to delete this page?</string>
    <string name="ble_history_data_delete">Offline data removal...</string>
    <string name="ble_history_data_receive">Cannot write in real time during receiving offline data %1$d%%</string>
    <string name="label_hint_text">Page search</string>
    <string name="note_hint_text">Enter a notebook name search.</string>
    <string name="label_text">Page sign</string>
    <string name="calendar_text">Course</string>
    <string name="note_text">Search notebook</string>
    <string name="pen_setting">Pen setting</string>
    <string name="version_update">Check version update</string>
    <string name="label_save_success">Tag saved successfully</string>
    <string name="label_empty_text">No TAB at the moment</string>
    <string name="note_book_search">Search notebook</string>
    <string name="note_add_tips">Please connect the smart pen </string>
    <string name="login_success">Authorization login successful</string>
    <string name="authorize_qq">QQ Login authorization...</string>
    <string name="authorize_weixin">WeChat login authorization...</string>
    <string name="authorize_twitter">Twitter login authorization...</string>
    <string name="authorize_success">Authorized success, login...</string>
    <string name="authorize_fail">Authorization error</string>
    <string name="authorize_cancel">Authorization to cancel</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="app_QQ">Please install QQ client.</string>
    <string name="app_WeChat">Please install Wechat client</string>
    <string name="app_Twitter">Please install twitter client</string>
    <string name="app_Facebook">Please install Facebook client</string>
    <string name="ble_tips">Disconnected</string>
    <string name="no_login">Not logged in</string>
    <string name="bind_ble_text">Currently there is no binding smart pen, whether to bind.</string>
    <string name="ble_interrupted_text">Bluetooth connection interruption, whether or not to connect</string>
    <string name="login_show">Please select login mode.</string>
    <string name="login_twitter_text">Twitter</string>
    <string name="login_facebook_text">Facebook</string>
    <string name="app_login">Log in to the cloud backup note.</string>
    <string name="please_write_tips">Please write</string>
    <string name="wechat_friends">Wechat friend</string>
    <string name="wechat_moments">Wechat Moments</string>
    <string name="qq_friends">QQ friend</string>
    <string name="qq_zone">Qzone</string>
    <string name="sina_weibo">Sina weibo</string>
    <string name="str_pen_unbind">Smart pen loses connection</string>
    <string-array name="week_str">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FIR</item>
        <item>SAT</item>
    </string-array>
    <string name="note_name">note_name</string>
    <string name="note_lock">note_lock</string>
    <string name="note_type">note_type</string>
    <string name="note_book_id">note_book_id</string>
    <string name="page_num">page_num</string>
    <string name="page_id">page_id</string>
    <string name="is_lock">is_lock</string>
    <string name="user_agreement_title">User agreement</string>
    <string name="user_agreement_title2">Privacy Policy</string>
    <string name="please_real_write_tips">It can be written in real time.</string>
    <string name="authorize_facebook">Facebook Login authorization...</string>
    <string name="jump">skip</string>
    <string name="tourist">Tourist</string>
    <string name="bangding">Binding a pen</string>
    <string name="banben">Version information</string>
    <string name="unbind">Remove the binding</string>
    <string name="delete_history">Deletion of historical records...</string>
    <string name="mycontent">content</string>
    <string name="facebook">Facebook</string>
    <string name="wework">Wework</string>
    <string name="twitter">Twitter</string>
    <string name="biness">Business book</string>
    <string name="user_guide">User Guide</string>
    <string name="menu_share">Share</string>
    <string name="menu_records">Records</string>
    <string name="offline_data">Offline data</string>
    <string name="offline_data_clean">Clean</string>
    <string name="batt_info">Electricity</string>
    <string name="menu_hand_reco">Recognition</string>
    <string name="report_log">Report failure</string>
    <string name="report">Report</string>
    <string name="notes_clean">Clean</string>
    <string name="str_sync">Sync offline data</string>
    <string name="str_permission_hint"> You can also turn off authorization in the system, which may affect the normal use of some functions. </string>
    <string name="str_permission_local"> targeting </string>
    <string name="str_permission_local_content"> To scan low-power Bluetooth BLE devices, the application needs to have permission to access the device location. </string>
    <string name="str_permission_storage"> Storage </string>
    <string name="str_permission_storage_content"> Cache notes and audio to reduce data usage. </string>
    <string name="str_permission_audio"> Microphone </string>
    <string name="str_permission_audio_content"> Provides you with features like recording transcribing </string>
    <string name="str_permission_sure">I know</string>
    <string name="str_permission_title"> In order to bring you a smooth writing experience, QPen Pen needs to apply for the following permissions from you: </string>
    <string name="menu_title_mcloud">Upload mCloud</string>
</resources>