<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:text="@string/str_permission_title"
            android:textColor="@color/app_click_text_black"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="56dp">

            <ImageView
                android:id="@+id/permission_local_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="10dp"
                android:src="@drawable/icon_permission_local"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/permission_local_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/str_permission_local"
                android:textColor="@color/colors_menu_black"
                app:layout_constraintStart_toEndOf="@id/permission_local_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/str_permission_local_content"
                android:textColor="@color/app_history_book_gray"
                app:layout_constraintLeft_toRightOf="@id/permission_local_image"
                app:layout_constraintTop_toBottomOf="@id/permission_local_title"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="12dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp">

            <ImageView
                android:id="@+id/permission_storage_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="10dp"
                android:src="@drawable/icon_permission_storage"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/permission_storage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/str_permission_storage"
                android:textColor="@color/colors_menu_black"
                app:layout_constraintStart_toEndOf="@id/permission_storage_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/str_permission_storage_content"
                android:textColor="@color/app_history_book_gray"
                app:layout_constraintLeft_toRightOf="@id/permission_storage_image"
                app:layout_constraintTop_toBottomOf="@id/permission_storage_title"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="12dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="56dp">

            <ImageView
                android:id="@+id/permission_audio_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="10dp"
                android:src="@drawable/icon_permission_audio"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/permission_audio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/str_permission_audio"
                android:textColor="@color/colors_menu_black"
                app:layout_constraintStart_toEndOf="@id/permission_audio_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/str_permission_audio_content"
                android:textColor="@color/app_history_book_gray"
                app:layout_constraintLeft_toRightOf="@id/permission_audio_image"
                app:layout_constraintTop_toBottomOf="@id/permission_audio_title"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="12dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            android:text="@string/str_permission_hint"
            android:textColor="@color/app_click_text_black"
            android:textSize="12sp" />

        <Space
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/permission_btn"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/permission_agree_bg"
            android:onClick="onViewClick"
            android:text="@string/str_permission_sure"
            android:textColor="@color/text_color_white"
            android:textSize="14sp" />
    </LinearLayout>

</layout>