<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="140dp"
    android:padding="16dp"
    android:layout_gravity="center"
    android:background="@drawable/shape_corner"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/dialog_rename_tips"
        android:textColor="@color/color_0D7993"
        />
    <EditText
        android:id="@+id/dialog_label"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:singleLine="true"
        android:background="@null"
        android:textSize="@dimen/text_size_16"
        android:textCursorDrawable="@drawable/color_cursor"
        android:maxLength="6"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_0D7993"
        />
    <LinearLayout
        android:id="@+id/dialog_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/dialog_negative"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_gravity="bottom"
            android:background="@drawable/negative_btn_bg"
            android:textSize="14sp"
            android:textColor="#FFF"
            android:layout_marginRight="20dp"
            android:text="@string/dialog_cancel_text"
            />
        <Button
            android:id="@+id/dialog_positive"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_gravity="bottom"
            android:background="@drawable/positive_btn_bg"
            android:textSize="14sp"
            android:textColor="#FFF"
            android:layout_marginLeft="20dp"
            android:text="@string/dialog_confirm_text"
            />
    </LinearLayout>
</LinearLayout>