<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_white_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_hand_reco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/selector_menu_item"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/iv_hand_reco"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="5dp"
                android:src="@drawable/icon_hwr_reco" />

            <TextView
                android:id="@+id/tv_hand_reco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/menu_hand_reco" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_record_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/selector_menu_item"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_record_play"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="5dp"
                android:src="@drawable/icon_records" />

            <TextView
                android:id="@+id/tv_record_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/menu_records" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/selector_menu_item"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="5dp"
                android:src="@drawable/icon_share_green" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/menu_share" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_upload_mcloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_menu_item"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_upload_mcloud"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/mcloud_addto_icon" />

            <TextView
                android:id="@+id/tv_upload_mcloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/menu_title_mcloud" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_notes_clean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_menu_item"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_notes_clean"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="5dp"
                android:src="@drawable/icon_notes_clean" />

            <TextView
                android:id="@+id/tv_notes_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/notes_clean" />
        </LinearLayout>
    </LinearLayout>
</layout>